# TuiDo

./: .gitignore  README.md
go/: go.mod  go.sum  main.go
go/cmd/: add.go  complete.go  delete.go  list.go  root.go
go/todos/: app.go  todos.go
go/todos/todo/: todo.go
rust/: Cargo.toml
rust/src/: cli.rs  main.rs  todos.rs
rust/src/todos/: todo.rs
