[package]
name = "tuido"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-humanize = "0.2.3"
clap = { version = "4.5.14", features = ["derive"] }
csv = "1.3.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_with = { version = "3.9.0", features = ["chrono_0_4"] }
